--- a/bcsoft/package.json
+++ b/bcsoft/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "next": "12.1.6",
+    "node-sp-auth": "^3.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^1.3.0"
