--- a/bcsoft/package.json
+++ b/bcsoft/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "sass": "^1.52.3",
+    "svg-sprite-loader": "^6.0.11",
     "typescript": "4.7.3"
   }
 }
