--- a/bcsoft/package.json
+++ b/bcsoft/package.json
@@ -14,10 +14,11 @@
     "node-sp-auth": "^3.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^8.0.7",
     "swr": "^1.3.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.43",
+    "@types/node": "^18.0.1",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
     "eslint": "8.17.0",
