--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-- master
+- develop
 
 pool:
  vmImage: ubuntu-latest
@@ -12,7 +12,7 @@ pool:
 steps:
 - task: NodeTool@0
  inputs:
-   versionSpec: '12.x'
+   versionSpec: '14.x'
  displayName: 'Install Node.js'
 
 - script: |
