--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,23 +12,13 @@ pool:
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '14.x'
+    versionSpec: '16.x'
+  displayName: 'Install Node.js'
 
 - script: |
-   npm install
-   npm run build
- displayName: 'npm install and build'
+    yarn install
+  displayName: 'yarn install'
 
-- task: ArchiveFiles@2
- inputs:
-   rootFolderOrFile: '.'
-   includeRootFolder: false
-   archiveType: 'zip'
-   archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-   replaceExistingArchive: true
-
-- task: PublishBuildArtifacts@1
- inputs:
-   PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-   ArtifactName: 'drop'
-   publishLocation: 'Container'
+- script: |
+    yarn run build
+  displayName: 'yarn build'
