Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,15 +10,10 @@ pool:
  vmImage: ubuntu-latest
 
 steps:
-- task: NodeTool@0
+- task: AzureStaticWebApp@0
   inputs:
-    versionSpec: '16.x'
-  displayName: 'Install Node.js'
-
-- script: |
-    yarn install
-  displayName: 'yarn install'
-
-- script: |
-    yarn run build
-  displayName: 'yarn build'
+    app_location: 'bcsoft'
+    skip_app_build: true
+    skip_api_build: true
+    is_static_export: true
+    production_branch: 'develop'
