Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,15 @@ steps:
     npm run build
   workingDirectory: $(Build.SourcesDirectory)/bcsoft
   displayName: 'npm install and build'
+- task: ArchiveFiles@2
+  inputs:
+   rootFolderOrFile: '.'
+   includeRootFolder: false
+   archiveType: 'zip'
+   archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+   replaceExistingArchive: true
+- task: PublishBuildArtifacts@1
+  inputs:
+   PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+   ArtifactName: 'drop'
+   publishLocation: 'Container'
