--- a/bcsoft/package.json
+++ b/bcsoft/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start",
+    "build": "next build",
+    "start": "node_modules/next/dist/bin/next start --port ${PORT:-3000}",
     "lint": "next lint",
     "export":"next export" 
   },
